--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  geolocator: ^11.0.0
+  geocoding: ^3.0.0
   flutter:
     sdk: flutter
   http: ^1.1.0
