--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,36 @@ app.*.symbols
 app.*.map.json
 
 # Android Studio will place build artifacts here
+
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Flutter/Dart
+.packages
+build/
+android/.gradle/
+android/local.properties
+ios/Flutter/Flutter.framework
+ios/Flutter/Flutter.podspec
+ios/Pods/
+ios/.symlinks/
+ios/Runner.xcworkspace/
+macos/Flutter/ephemeral/
+macos/.flutter-plugins
+macos/.flutter-plugins-dependencies
+windows/flutter/ephemeral/
+linux/flutter/ephemeral/
+web/.dart_tool/
+
+# VS Code
+.vscode/
+
+# Xcode
+DerivedData/
+*.xcworkspace
+*.xcuserstate
+
+# Other
+*.lock
+*.tmp
